Add Gradle wrapper config. Update gitignore